@@ -5,4 +5,7 @@ void F77_SUB(omxunsafedgemm)(const char*, const char*, int*, int*,
 	int*, double*, double*, int*, double*, int*, double*,
 	double*, int*);
 
+void F77_SUB(omxunsafedgemv)(const char*, int*, int*, double*, double*,
+	int*, double*, int*, double*, double*, int*);
+
 #endif //_OMXBLAS_H
